fixes the box being invisible

--- a/public/css/lfm.css
+++ b/public/css/lfm.css
@@ -1,13 +1,9 @@
-/**
- * Tracks, a Last-fm scrobbles widget.
- * Except when in "demo"-mode, widget is able to show a continuously updated tracklist.
- *
- *    Stig Nygaard, 2024.
- *    https://www.rockland.dk/
- *    https://www.last.fm/user/rockland
- *    https://github.com/StigNygaard/lastfm-widgets
- *    https://lastfm-widgets.deno.dev/
- */
+ lastfm-tracks {   
+    box-sizing: border-box;   
+    border: 1px solid #000;   
+    width: 500px;   
+    height: 260px; 
+}
 
 :host {
   all: revert; /* In this webcomponent I don't want to inherit anything */
@@ -18,8 +14,6 @@
   overflow: clip;
   max-height: 100%;
   opacity: 1;
-  color: rgb(34, 34, 34); /* #222; */
-  background-color: #fff;
   margin: 0;
   padding: 0 !important;
   line-height: 1.2 !important;
@@ -223,29 +217,19 @@ a.username {
 }
 
 #playlist a {
-  color: rgba(34, 34, 34, 1);
+    color: var(--text-clr);
 }
 
 #playlist > div {
   margin: 0;
   padding: 1px;
   border-bottom: 1px solid #eee;
-  background-color: #fff;
+  background-color: #26233a !important;;
 }
 #playlist > div:last-child {
   border-bottom: none;
 }
-#playlist > div.albuminfo {
-  display: grid;
-  grid-template-columns: [coverstart] 32px [albumlinestart] auto [end];
-  grid-template-rows: [top] 32px [bottom];
-  grid-template-areas:
-      'cover albumline';
-  column-gap: 1px;
 
-  background-color: #fbe9e9;
-  padding-right: 4px;
-}
 :host(.no-albums) #playlist > div.albuminfo {
   display: none;
 }
